Check-in and voucher templates

--- a/src/pretix/control/templates/pretixcontrol/checkin/index.html
+++ b/src/pretix/control/templates/pretixcontrol/checkin/index.html
@@ -7,73 +7,93 @@
     {% blocktrans with name=checkinlist.name %}Check-in list: {{ name }}{% endblocktrans %}
 {% endblock %}
 {% block content %}
-    <h1>
-        {% blocktrans with name=checkinlist.name %}Check-in list: {{ name }}{% endblocktrans %}
-        {% if 'can_change_event_settings' in request.eventpermset %}
-            <a href="{% url "control:event.orders.checkinlists.edit" event=request.event.slug organizer=request.event.organizer.slug list=checkinlist.pk %}"
-                    class="btn btn-default">
-                <span class="fa fa-edit"></span>
-                {% trans "Edit list" %}
-            </a>
-        {% endif %}
-        <a href="{% url "control:event.orders.export" event=request.event.slug organizer=request.event.organizer.slug %}?identifier=checkinlistpdf&checkinlistpdf-list={{ checkinlist.pk }}"
-                class="btn btn-default" target="_blank">
-            <span class="fa fa-download"></span>
-            {% trans "PDF" %}
-        </a>
-        <a href="{% url "control:event.orders.export" event=request.event.slug organizer=request.event.organizer.slug %}?identifier=checkinlistcsv&checkinlistcsv-list={{ checkinlist.pk }}"
-                class="btn btn-default" target="_blank">
-            <span class="fa fa-download"></span>
-            {% trans "CSV" %}
-        </a>
-    </h1>
-    <form class="row filter-form" action="" method="get">
-        <div class="col-md-4 col-sm-6 col-xs-12">
-            {% bootstrap_field filter_form.user layout='inline' %}
+    <div class="panel panel-with-btn panel-default">
+        <div class="panel-heading">
+            <div class="pull-right">
+                <a href="{% url "control:event.orders.export" event=request.event.slug organizer=request.event.organizer.slug %}?identifier=checkinlistpdf&checkinlistpdf-list={{ checkinlist.pk }}"
+                   class="btn btn-default" target="_blank">
+                    <span class="fa fa-download"></span>
+                    {% trans "PDF" %}
+                </a>
+                <a href="{% url "control:event.orders.export" event=request.event.slug organizer=request.event.organizer.slug %}?identifier=checkinlistcsv&checkinlistcsv-list={{ checkinlist.pk }}"
+                   class="btn btn-default" target="_blank">
+                    <span class="fa fa-download"></span>
+                    {% trans "CSV" %}
+                </a>
+                {% if 'can_change_event_settings' in request.eventpermset %}
+                    <a href="{% url "control:event.orders.checkinlists.edit" event=request.event.slug organizer=request.event.organizer.slug list=checkinlist.pk %}"
+                       class="btn btn-default">
+                        <span class="fa fa-edit"></span>
+                        {% trans "Edit list" %}
+                    </a>
+                {% endif %}
+            </div>
+            <h1 class="panel-title">
+                {% blocktrans with name=checkinlist.name %}Check-in list: {{ name }}{% endblocktrans %}
+            </h1>
         </div>
-        <div class="col-md-3 col-sm-6 col-xs-12">
-            {% bootstrap_field filter_form.status layout='inline' %}
-        </div>
-        <div class="col-md-3 col-sm-6 col-xs-12">
-            {% bootstrap_field filter_form.item layout='inline' %}
-        </div>
-        <div class="col-md-2 col-sm-6 col-xs-12">
-            <button class="btn btn-primary btn-block" type="submit">
-                <span class="fa fa-filter"></span>
-                <span class="hidden-md">
+        <form class="panel-body row filter-form" action="" method="get">
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                {% bootstrap_field filter_form.user layout='inline' %}
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                {% bootstrap_field filter_form.status layout='inline' %}
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12">
+                {% bootstrap_field filter_form.item layout='inline' %}
+            </div>
+            <div class="col-md-2 col-sm-6 col-xs-12">
+                <button class="btn btn-primary btn-block" type="submit">
+                    <span class="fa fa-filter"></span>
+                    <span class="hidden-md">
                     {% trans "Filter" %}
                 </span>
-            </button>
-        </div>
-    </form>
-    {% if entries|length == 0 %}
-        <div class="empty-collection">
-            <p>
-                {% blocktrans trimmed %}
-                    No attendee record was found.
-                {% endblocktrans %}
-            </p>
-        </div>
-    {% else %}
-        <form method="post" action="">
-           {% csrf_token %}
-            <div class="table-responsive">
+                </button>
+            </div>
+        </form>
+        {% if entries|length == 0 %}
+            <div class="panel-body empty-collection">
+                <p>
+                    {% blocktrans trimmed %}
+                        No attendee record was found.
+                    {% endblocktrans %}
+                </p>
+            </div>
+        {% else %}
+            <form method="post" action="" class="table-responsive">
+                {% csrf_token %}
                 <table class="table table-condensed table-hover">
                     <thead>
                     <tr>
                         <th></th>
-                        <th>{% trans "Order code" %} <a href="?{% url_replace request 'ordering' '-code'%}"><i class="fa fa-caret-down"></i></a>
-                      <a href="?{% url_replace request 'ordering' 'code'%}"><i class="fa fa-caret-up"></i></a></th>
-                        <th>{% trans "Item" %} <a href="?{% url_replace request 'ordering' '-item'%}"><i class="fa fa-caret-down"></i></a>
-                      <a href="?{% url_replace request 'ordering' 'item'%}"><i class="fa fa-caret-up"></i></a></th>
-                        <th>{% trans "Email" %} <a href="?{% url_replace request 'ordering' '-email'%}"><i class="fa fa-caret-down"></i></a>
-                      <a href="?{% url_replace request 'ordering' 'email'%}"><i class="fa fa-caret-up"></i></a></th>
-                        <th>{% trans "Name" %} <a href="?{% url_replace request 'ordering' '-name'%}"><i class="fa fa-caret-down"></i></a>
-                      <a href="?{% url_replace request 'ordering' 'name'%}"><i class="fa fa-caret-up"></i></a></th>
-                        <th>{% trans "Status" %} <a href="?{% url_replace request 'ordering' '-status'%}"><i class="fa fa-caret-down"></i></a>
-                      <a href="?{% url_replace request 'ordering' 'status'%}"><i class="fa fa-caret-up"></i></a></th>
-                        <th>{% trans "Timestamp" %} <a href="?{% url_replace request 'ordering' '-timestamp'%}"><i class="fa fa-caret-down"></i></a>
-                      <a href="?{% url_replace request 'ordering' 'timestamp'%}"><i class="fa fa-caret-up"></i></a></th>
+                        <th>{% trans "Order code" %} <a href="?{% url_replace request 'ordering' '-code' %}">
+                            <i class="fa fa-caret-down"></i></a>
+                            <a href="?{% url_replace request 'ordering' 'code' %}">
+                                <i class="fa fa-caret-up"></i></a>
+                        </th>
+                        <th>{% trans "Item" %} <a href="?{% url_replace request 'ordering' '-item' %}">
+                            <i class="fa fa-caret-down"></i></a>
+                            <a href="?{% url_replace request 'ordering' 'item' %}">
+                                <i class="fa fa-caret-up"></i></a>
+                        </th>
+                        <th>{% trans "Email" %} <a href="?{% url_replace request 'ordering' '-email' %}">
+                            <i class="fa fa-caret-down"></i></a>
+                            <a href="?{% url_replace request 'ordering' 'email' %}">
+                                <i class="fa fa-caret-up"></i></a>
+                        </th>
+                        <th>{% trans "Name" %} <a href="?{% url_replace request 'ordering' '-name' %}">
+                            <i class="fa fa-caret-down"></i></a>
+                            <a href="?{% url_replace request 'ordering' 'name' %}">
+                                <i class="fa fa-caret-up"></i></a>
+                        </th>
+                        <th>{% trans "Status" %} <a href="?{% url_replace request 'ordering' '-status' %}">
+                            <i class="fa fa-caret-down"></i></a>
+                            <a href="?{% url_replace request 'ordering' 'status' %}"><i class="fa fa-caret-up"></i></a>
+                        </th>
+                        <th>{% trans "Timestamp" %} <a href="?{% url_replace request 'ordering' '-timestamp' %}">
+                            <i class="fa fa-caret-down"></i></a>
+                            <a href="?{% url_replace request 'ordering' 'timestamp' %}">
+                                <i class="fa fa-caret-up"></i></a></th>
                     </tr>
                     </thead>
                     <tbody>
@@ -81,11 +101,13 @@
                         <tr>
                             <td>
                                 {% if "can_change_orders" in request.eventpermset %}
-                                    <input type="checkbox" name="checkin" id="id_checkin" class="" value="{{ e.pk }}"/>
+                                    <input type="checkbox" name="checkin" id="id_checkin" class=""
+                                           value="{{ e.pk }}"/>
                                 {% endif %}
                             </td>
                             <td>
-                                <strong><a href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=e.order.code %}">{{ e.order.code }}</a></strong>
+                                <strong><a
+                                        href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=e.order.code %}">{{ e.order.code }}</a></strong>
                                 {% if e.order.status == "n" %}
                                     <span class="label label-warning">{% trans "unpaid" %}</span>
                                 {% endif %}
@@ -115,13 +137,17 @@
                     {% endfor %}
                     </tbody>
                 </table>
+                {% if "can_change_orders" in request.eventpermset %}
+                    <div class="panel-footer">
+                        <button type="submit" class="btn btn-primary btn-save">
+                            {% trans "Check-In selected attendees" %}
+                        </button>
+                    </div>
+                {% endif %}
+            </form>
+            <div class="panel-footer">
+                {% include "pretixcontrol/pagination.html" %}
             </div>
-            {% if "can_change_orders" in request.eventpermset %}
-                <button type="submit" class="btn btn-primary btn-save">
-                    {% trans "Check-In selected attendees" %}
-                </button>
-            {% endif %}
-        </form>
-        {% include "pretixcontrol/pagination.html" %}
-    {% endif %}
+        {% endif %}
+    </div>
 {% endblock %}
