--- a/src/pretix/control/templates/pretixcontrol/items/questions.html
+++ b/src/pretix/control/templates/pretixcontrol/items/questions.html
@@ -12,6 +12,8 @@
                 example might be to ask your users about dietary requirements.
             {% endblocktrans %}
         </div>
+    </div>
+    <div class="panel panel-default">
         {% if questions|length == 0 %}
             <div class="empty-collection panel-body">
                 <p>
