--- a/src/pretix/static/pretixbase/scss/_theme.scss
+++ b/src/pretix/static/pretixbase/scss/_theme.scss
@@ -114,7 +114,7 @@
 .panel-default {
   border: none;
 }
-.panel-default > .panel-heading, .panel-default > .panel-footer {
+.panel-default > .panel-heading, .panel-default .panel-footer {
   background: white;
 }
 
